# Sketchup-API-C-Wrapper

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DOXYFILE  LICENSE  README.md  SketchUpAPI.sln  _application_8cpp_source.html  _application_8hpp_source.html  _arc_curve_8cpp_source.html  _arc_curve_8hpp_source.html  _arc_curve_tests_8cpp_source.html  _attribute_dictionary_8cpp_source.html  _attribute_dictionary_8hpp_source.html  _axes_8cpp_source.html  _axes_8hpp_source.html  _camera_8cpp_source.html  _camera_8hpp_source.html  _camera_tests_8cpp_source.html  _classification_attribute_8cpp_source.html  _classification_attribute_8hpp_source.html  _classification_attribute_tests_8cpp_source.html  _classification_info_8cpp_source.html  _classification_info_8hpp_source.html  _classification_info_tests_8cpp_source.html  _classifications_8cpp_source.html  _classifications_8hpp_source.html  _classifications_tests_8cpp_source.html  _color_8cpp_source.html  _color_8hpp_source.html  _color_tests_8cpp_source.html  _component_definition_8cpp_source.html  _component_definition_8hpp_source.html  _component_instance_8cpp_source.html  _component_instance_8hpp_source.html  _component_tests_8cpp_source.html  _curve_8cpp_source.html  _curve_8hpp_source.html  (+313 more)
.github/workflows/: docs.yml
GoogleTest/: GoogleTest.vcxproj  GoogleTest.vcxproj.filters  stdafx.cpp
SUAPI-CppWrapper/: Color.cpp  Color.hpp  Geometry.cpp  Geometry.hpp  Initialize.cpp  Initialize.hpp  String.cpp  String.hpp  Transformation.cpp  Transformation.hpp
SUAPI-CppWrapper.xcodeproj/: project.pbxproj
SUAPI-CppWrapper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SUAPI-CppWrapper/model/: AttributeDictionary.cpp  AttributeDictionary.hpp  Axes.cpp  Axes.hpp  Classifications.cpp  Classifications.hpp  ComponentDefinition.cpp  ComponentDefinition.hpp  ComponentInstance.cpp  ComponentInstance.hpp  Curve.cpp  Curve.hpp  DrawingElement.cpp  DrawingElement.hpp  Edge.cpp  Edge.hpp  Entities.cpp  Entities.hpp  Entity.cpp  Entity.hpp  Face.cpp  (+35 more)
SketchUp API C++ Wrapper/: Color.cpp  Color.hpp  Geometry.cpp  Geometry.hpp  Initialize.cpp  Initialize.hpp  String.cpp  String.hpp  Transformation.cpp  Transformation.hpp  main.cpp
SketchUp API C++ Wrapper.xcodeproj/: project.pbxproj
SketchUpAPI/: SketchUpAPI.sln  SketchUpAPI.vcxproj  SketchUpAPI.vcxproj.filters  stdafx.cpp
SketchUpAPITests/: ColorTests.cpp  RadiansTests.cpp  SketchUpAPITests.cpp  SketchUpAPITests.vcxproj  SketchUpAPITests.vcxproj.filters  TypedValueTests.cpp  stdafx.cpp  stdafx.h
cmake/: FindSketchUpAPI.cmake  GoogleTest.cmake  SketchUpAPICpp.cmake  SketchUpAPITests.cmake
html/: 2016_2_lay_out_a_p_i_8framework_2_headers_2common_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2geometry_2geometry_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2initialize_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2layout_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2connectionpoint_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2dictionary_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2document_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2documentexportoptions_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2ellipse_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2entity_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2entityiterator_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2entitylist_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2formattedtext_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2grid_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2group_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2image_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2imagerep_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2label_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2layer_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2layerinstance_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2layerlist_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2lineardimension_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2page_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2pageinfo_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2pagelist_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2path_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2rectangle_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2sketchupmodel_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2style_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_headers_2model_2typed__value_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2common_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2geometry_2geometry_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2initialize_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2layout_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2model_2connectionpoint_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2model_2dictionary_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2model_2document_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2model_2documentexportoptions_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2model_2ellipse_8h_source.html  2016_2_lay_out_a_p_i_8framework_2_versions_2_a_2_headers_2model_2entity_8h_source.html  (+2553 more)
models/: box and box.skp  issue-48.skp
tests/: CMakeLists.txt  ColorTests.cpp  ModelPath.h.in  RadiansTests.cpp  SketchUpAPITests.cmake  SketchUpAPITests.cpp  SketchUpAPITests.hpp  StringTests.cpp  TypedValueTests.cpp
xcode/: CMakeCache.txt  cmake_install.cmake
(+368 files in other folders)
